--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta httm-equiv="Content-type" content="text/html" charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title></title>
-</head>
-<body>
-<h1> HELLO BOGDASHA!!!</h1>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+</head>
+</header>
+<body>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+        <a href="index.html" class="navbar-brand">Lawdecision</a>
+        <button type="buton" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
+            <span class="sr-only">toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        </div>
+<div id="navbar" class="navbar-collapse collapse">
+
+        <ul class="nav navbar-nav navbar-right">
+            <li>О компании</li>
+            <li>цены</li>
+        </ul>
+    </div>
+    </div>
+</nav>
 </body>
 </html>
