--- a/www/index.html
+++ b/www/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
 </head>
 </header>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-        <a href="index.html" class="navbar-brand">Lawdecision</a>
-        <button type="buton" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse">
+        <a href="/" class="navbar-brand">Lawdecision</a>
+        <button type="button" class='navbar-toggle' data-toggle='collapse' data-target=".navbar-collapse">
             <span class="sr-only">toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -26,8 +27,12 @@
 <div id="navbar" class="navbar-collapse collapse">
 
         <ul class="nav navbar-nav navbar-right">
-            <li>О компании</li>
-            <li>цены</li>
+            <li>О нас</li>
+            <li>Вы получаете</li>
+            <li>Направления</li>
+            <li>Стоимость услуг</li>
+            <li>Контакты</li>
+
         </ul>
     </div>
     </div>
